tests/errors/standardize_increment.php
<?php

declare(strict_types=1);

$i = 0;
$i += 1;
